--- a/Agilefreaks/Agilefreaks.csproj
+++ b/Agilefreaks/Agilefreaks.csproj
@@ -131,15 +131,49 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\img\bg.jpg" />
-    <Content Include="Content\img\bg_timer.png" />
-    <Content Include="Content\img\border.png" />
-    <Content Include="Content\img\container_bg.png" />
+    <Content Include="Content\apple-touch-icon-114x114-precomposed.png" />
+    <Content Include="Content\apple-touch-icon-144x144-precomposed.png" />
+    <Content Include="Content\apple-touch-icon-57x57-precomposed.png" />
+    <Content Include="Content\apple-touch-icon-72x72-precomposed.png" />
+    <Content Include="Content\apple-touch-icon-precomposed.png" />
+    <Content Include="Content\apple-touch-icon.png" />
+    <Content Include="Content\bootstrap-responsive.css" />
+    <Content Include="Content\bootstrap.css" />
+    <Content Include="Content\favicon.ico" />
+    <Content Include="Content\font\BebasNeue-webfont.svg" />
+    <Content Include="Content\ie7.css" />
+    <Content Include="Content\ie8.css" />
+    <Content Include="Content\ie9.css" />
+    <Content Include="Content\img\active-tab.png" />
+    <Content Include="Content\img\bg-lines.png" />
+    <Content Include="Content\img\bg_aboutus.png" />
+    <Content Include="Content\img\bg_contact.jpg" />
+    <Content Include="Content\img\blue_gradient.png" />
+    <Content Include="Content\img\border-top.png" />
+    <Content Include="Content\img\desc_top_bar.png" />
+    <Content Include="Content\img\featured_item.png" />
+    <Content Include="Content\img\glyphicons-halflings-white.png" />
+    <Content Include="Content\img\glyphicons-halflings.png" />
+    <Content Include="Content\img\icons.png" />
+    <Content Include="Content\img\left-quote.png" />
     <Content Include="Content\img\logo.png" />
-    <Content Include="Content\img\sep.png" />
-    <Content Include="Content\img\time_bg.png" />
-    <Content Include="Content\img\top_bar.png" />
-    <Content Include="Content\Style.css" />
+    <Content Include="Content\img\member00.png" />
+    <Content Include="Content\img\member01.png" />
+    <Content Include="Content\img\member02.png" />
+    <Content Include="Content\img\member03.png" />
+    <Content Include="Content\img\menu_selected.png" />
+    <Content Include="Content\img\menu_sep.png" />
+    <Content Include="Content\img\pattern-triangles.png" />
+    <Content Include="Content\img\right-quote.png" />
+    <Content Include="Content\img\shadow-bar-features.png" />
+    <Content Include="Content\img\shadow-bar.png" />
+    <Content Include="Content\img\shadow-contact.png" />
+    <Content Include="Content\img\shadow_about.png" />
+    <Content Include="Content\img\tab.png" />
+    <Content Include="Content\img\workspace_01.jpg" />
+    <Content Include="Content\img\workspace_02.jpg" />
+    <Content Include="Content\img\workspace_contact.jpg" />
+    <Content Include="Content\style.css" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
@@ -195,23 +229,22 @@
     <Content Include="Content\themes\base\minified\jquery.ui.tabs.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
     <Content Include="Global.asax" />
-    <Content Include="Content\Site.css" />
+    <Content Include="Content\font\BebasNeue-webfont.eot" />
+    <Content Include="Content\font\BebasNeue-webfont.ttf" />
+    <Content Include="Content\font\BebasNeue-webfont.woff" />
     <None Include="Scripts\jquery-1.7.1.intellisense.js" />
+    <Content Include="Scripts\bootstrap.js" />
+    <Content Include="Scripts\html5-3.6-respond-1.1.0.min.js" />
     <Content Include="Scripts\jquery-1.7.1.js" />
-    <Content Include="Scripts\jquery-1.7.1.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery-ui-1.8.20.js" />
-    <Content Include="Scripts\jquery-ui-1.8.20.min.js" />
-    <Content Include="Scripts\jquery.backstretch.js" />
-    <Content Include="Scripts\jquery.backstretch.min.js" />
-    <Content Include="Scripts\jquery.countdown.js" />
-    <Content Include="Scripts\jquery.countdown.min.js" />
+    <Content Include="Scripts\jquery.bxslider.js" />
+    <Content Include="Scripts\jquery.easing.1.3.js" />
+    <Content Include="Scripts\jquery.fitvids.js" />
+    <Content Include="Scripts\jquery.placeholder.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
-    <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
-    <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
-    <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\knockout-2.1.0.debug.js" />
     <Content Include="Scripts\knockout-2.1.0.js" />
     <Content Include="Scripts\main.js" />
@@ -229,6 +262,9 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\_Header.cshtml" />
+    <Content Include="Views\Home\_Features.cshtml" />
+    <Content Include="Views\Home\Quates.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
