--- a/Agilefreaks/Agilefreaks.csproj
+++ b/Agilefreaks/Agilefreaks.csproj
@@ -150,6 +150,8 @@
     <Content Include="Content\img\bg_contact.jpg" />
     <Content Include="Content\img\blue_gradient.png" />
     <Content Include="Content\img\border-top.png" />
+    <Content Include="Content\img\DoruParvu.png" />
+    <Content Include="Content\img\IleanaTristiu.png" />
     <Content Include="Content\img\desc_top_bar.png" />
     <Content Include="Content\img\featured_item.png" />
     <Content Include="Content\img\glyphicons-halflings-white.png" />
@@ -158,9 +160,9 @@
     <Content Include="Content\img\left-quote.png" />
     <Content Include="Content\img\logo.png" />
     <Content Include="Content\img\member00.png" />
-    <Content Include="Content\img\member01.png" />
-    <Content Include="Content\img\member02.png" />
-    <Content Include="Content\img\member03.png" />
+    <Content Include="Content\img\NistorAdrian.png" />
+    <Content Include="Content\img\CalinoiuAlexandru.png" />
+    <Content Include="Content\img\BadilaCristian.png" />
     <Content Include="Content\img\menu_selected.png" />
     <Content Include="Content\img\menu_sep.png" />
     <Content Include="Content\img\pattern-triangles.png" />
@@ -232,6 +234,7 @@
     <Content Include="Content\font\BebasNeue-webfont.eot" />
     <Content Include="Content\font\BebasNeue-webfont.ttf" />
     <Content Include="Content\font\BebasNeue-webfont.woff" />
+    <Content Include="Robots.txt" />
     <None Include="Scripts\jquery-1.7.1.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\html5-3.6-respond-1.1.0.min.js" />
@@ -264,7 +267,10 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\_Header.cshtml" />
     <Content Include="Views\Home\_Features.cshtml" />
-    <Content Include="Views\Home\Quates.cshtml" />
+    <Content Include="Views\Home\_Quotes.cshtml" />
+    <Content Include="Views\Home\_AboutUs.cshtml" />
+    <Content Include="Views\Home\_Visit.cshtml" />
+    <Content Include="Views\Home\_Contact.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -272,6 +278,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
