--- a/Agilefreaks/Agilefreaks.csproj
+++ b/Agilefreaks/Agilefreaks.csproj
@@ -252,6 +252,7 @@
     <Content Include="Scripts\knockout-2.1.0.js" />
     <Content Include="Scripts\main.js" />
     <Content Include="Scripts\modernizr-2.5.3.js" />
+    <Content Include="Scripts\mouseFlow.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
