--- a/Agilefreaks/Agilefreaks.csproj
+++ b/Agilefreaks/Agilefreaks.csproj
@@ -151,6 +151,12 @@
     <Content Include="Content\img\blue_gradient.png" />
     <Content Include="Content\img\border-top.png" />
     <Content Include="Content\img\DoruParvu.png" />
+    <Content Include="Content\img\icon-comunication.png" />
+    <Content Include="Content\img\icon-constructive.png" />
+    <Content Include="Content\img\icon-flexibility.png" />
+    <Content Include="Content\img\icon-responsibility.png" />
+    <Content Include="Content\img\icon-sincerity.png" />
+    <Content Include="Content\img\icon-transparency.png" />
     <Content Include="Content\img\IleanaTristiu.png" />
     <Content Include="Content\img\desc_top_bar.png" />
     <Content Include="Content\img\featured_item.png" />
@@ -241,10 +247,15 @@
     <Content Include="Scripts\jquery-1.7.1.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery-ui-1.8.20.js" />
+    <Content Include="Scripts\jquery.backstretch.js" />
+    <Content Include="Scripts\jquery.backstretch.min.js" />
     <Content Include="Scripts\jquery.bxslider.js" />
     <Content Include="Scripts\jquery.easing.1.3.js" />
     <Content Include="Scripts\jquery.fitvids.js" />
     <Content Include="Scripts\jquery.placeholder.js" />
+    <Content Include="Scripts\jquery.placeholder.min.js" />
+    <Content Include="Scripts\jquery.scrollTo.js" />
+    <Content Include="Scripts\jquery.scrollTo.min.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
@@ -253,6 +264,8 @@
     <Content Include="Scripts\main.js" />
     <Content Include="Scripts\modernizr-2.5.3.js" />
     <Content Include="Scripts\mouseFlow.js" />
+    <Content Include="Scripts\waypoints-sticky.min.js" />
+    <Content Include="Scripts\waypoints.min.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
