--- a/Agilefreaks/Web.config
+++ b/Agilefreaks/Web.config
@@ -17,6 +17,8 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="SendGridUsername" value="agilefreaks" />
+    <add key="SendGridPassword" value="password" />
   </appSettings>
   <system.web>
     <httpRuntime targetFramework="4.5" />
