--- a/Agilefreaks/Agilefreaks.csproj
+++ b/Agilefreaks/Agilefreaks.csproj
@@ -252,6 +252,8 @@
     <None Include="Scripts\jquery-1.7.1.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\html5-3.6-respond-1.1.0.min.js" />
+    <Content Include="Scripts\humane\humane.min.js" />
+    <Content Include="Scripts\humane\jackedup.css" />
     <Content Include="Scripts\jquery-1.7.1.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery-ui-1.8.20.js" />
@@ -296,7 +298,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
