Changes sendgrid's username and password and adds SmtpApi

--- a/Agilefreaks/Web.config
+++ b/Agilefreaks/Web.config
@@ -17,8 +17,8 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="SendGridUsername" value="agilefreaks" />
-    <add key="SendGridPassword" value="password" />
+    <add key="SendGridUsername" value="azure_f30cfd0445610daaed900a1068814d84@azure.com" />
+    <add key="SendGridPassword" value="ArtLine123" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
