--- a/Agilefreaks/Web.config
+++ b/Agilefreaks/Web.config
@@ -25,16 +25,16 @@
 
     The following attributes can be set on the <httpRuntime> tag.
       <system.Web>
-        <httpRuntime targetFramework="4.5.1" />
+        <httpRuntime targetFramework="4.5" />
       </system.Web>
   -->
   <system.web>
-    <httpRuntime targetFramework="4.5" />
-    <compilation debug="true" targetFramework="4.5" />
+    <httpRuntime />
+    <compilation debug="true" targetFramework="4.6.2" />
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
     </authentication>
-    <pages>
+    <pages controlRenderingCompatibilityVersion="4.0">
       <namespaces>
         <add namespace="System.Web.Helpers" />
         <add namespace="System.Web.Mvc" />
@@ -105,7 +105,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
