--- a/Agilefreaks/packages.config
+++ b/Agilefreaks/packages.config
@@ -2,10 +2,10 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
-  <package id="jQuery" version="2.1.4" targetFramework="net45" />
-  <package id="jQuery.UI.Combined" version="1.11.4" targetFramework="net45" />
-  <package id="jQuery.Validation" version="1.14.0" targetFramework="net45" />
-  <package id="knockoutjs" version="3.3.0" targetFramework="net45" />
+  <package id="jQuery" version="3.1.1" targetFramework="net45" />
+  <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net45" />
+  <package id="jQuery.Validation" version="1.16.0" targetFramework="net45" />
+  <package id="knockoutjs" version="3.4.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Providers.Core" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Providers.LocalDB" version="2.0.0" targetFramework="net45" />
@@ -20,8 +20,7 @@
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.8.3" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
-  <package id="Sendgrid" version="6.1.0" targetFramework="net45" />
-  <package id="SendGrid.SmtpApi" version="1.3.1" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net45" />
+  <package id="Slick" version="1.5.11" targetFramework="net462" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
