--- a/Agilefreaks/packages.config
+++ b/Agilefreaks/packages.config
@@ -21,6 +21,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.8.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net45" />
+  <package id="Postmark" version="2.1.5" targetFramework="net462" />
   <package id="Slick" version="1.5.11" targetFramework="net462" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
